[metadata]
name = treepicker
version = 1.0.0
author = Eliran Levi
author-email = levioctl@gmail.com
home-page = https://github.com/levioctl/treepicker
summary = An interactive shell-based tree picker - navigate, search, pick single, pick multiple, etc.

[files]
packages =
    treepicker

[pep8]
max-line-length=109
